refactor: add menu style

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -2,16 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500;600;700&display=swap");
 
 body {
-	@apply bg-bg-color text-base text-black;
-	font-family: 'Golos Text', sans-serif;
+   @apply bg-bg-color text-base text-black;
+   font-family: "Golos Text", sans-serif;
 }
 
 .disabled {
-	pointer-events: none;
-	cursor: default;
-	text-decoration: none;
-	opacity: 0.2 !important;
+   pointer-events: none;
+   cursor: default;
+   text-decoration: none;
+   opacity: 0.2 !important;
+}
+
+.menu {
+   transform-origin: top right;
+   transition: transform .4s ease, opacity .4s ease, visibility .4s ease;
+}
+
+.open-menu {
+   visibility: visible;
+   opacity: 1;
+   transform: scale(1);
+
+}
+
+.close-menu {
+   visibility: hidden;
+   opacity: 0;
+   transform: scale(0.3);
 }
