--- a/src/app/layout/header/cart/cart.module.scss
+++ b/src/app/layout/header/cart/cart.module.scss
@@ -1,31 +1,46 @@
+.cartWrapper {
+  @apply absolute -left-[12.5rem] top-[4.2rem] z-20 w-80 rounded-xl bg-secondary px-6 py-4 text-sm text-white;
+  animation: 0.7s cartAnimation ease-in-out;
+}
+
 .cart {
-   display: flex;
-   flex-direction: column;
-   gap: 20px;
+  @apply mb-10;
+  .item {
+    @apply flex items-center gap-4 border-b border-b-black/30 pb-6 pt-4;
 
-   img {
-      border-radius: 5px;
-   }
+    .name {
+      @apply w-36 truncate font-semibold tracking-widest;
+    }
+    .name {
+      @apply w-36 truncate font-semibold tracking-widest;
+    }
+
+    .price {
+      @apply mt-1 text-sm text-white;
+    }
+
+    .variation {
+      @apply text-xs text-white opacity-70;
+    }
+  }
 }
+
 .footer {
-   display: flex;
-   justify-content: space-between;
-   font-size: 18px;
-   font-weight: 600;
-   margin-top: 20px;
+  > div:first-child {
+    @apply text-sm text-white;
+  }
+
+  > div:last-child {
+    @apply text-xl font-semibold;
+  }
 }
 
-.item {
-   display: flex;
-   align-items: center;
-   gap: 10px;
-}
+@keyframes cartAnimation {
+  from {
+    transform: translateX(110%);
+  }
 
-.name {
-   overflow: hidden;
-
-   text-overflow: ellipsis;
-}
-
-.price {
+  to {
+    transform: translateX(0);
+  }
 }
