--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -14,6 +14,12 @@ body {
   opacity: 0.2 !important;
 }
 
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding-inline: 20px;
+}
+
 .btn {
   @apply rounded-xl px-10 py-2 font-medium shadow transition duration-300 ease-in-out;
 
